<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svBarra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:id="@+id/ivPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/teal_200">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:background="@drawable/bg_perfil"
                    app:layout_constraintBottom_toTopOf="@id/llContenedor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llContenedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPerfil">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:layout_marginEnd="50dp"
                        android:text="@string/name">

                    </TextView>

                    <TextView
                        android:id="@+id/tvNombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/nombreuser">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginEnd="50dp"
                        android:gravity="center"
                        android:text="@string/email">

                    </TextView>

                    <TextView
                        android:id="@+id/tvCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/correouser">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="50dp"
                        android:text="@string/office"
                        android:gravity="center">

                    </TextView>

                    <TextView
                        android:id="@+id/tvOficina"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/officeuser">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginEnd="50dp"
                        android:text="@string/telefono"
                        android:gravity="center">

                    </TextView>

                    <TextView
                        android:id="@+id/tvTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:gravity="center_vertical"
                        android:text="@string/numerouser">

                    </TextView>
                </LinearLayout>

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="sendExplicit"
                    android:text="@string/editar">

                </Button>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btnLlamar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableBottom="@android:drawable/sym_call_outgoing"
                    android:onClick="make_calls"
                    android:text="@string/llamar"
                    android:backgroundTint="@android:color/holo_green_dark">

                </Button>

                <Button
                    android:id="@+id/btnWhatsApp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:drawableBottom="@drawable/ic_whatsapp"
                    android:onClick="whatsapp"
                    android:text="@string/whatsapp"
                    android:backgroundTint="@android:color/holo_green_dark">

                </Button>

                <Button
                    android:id="@+id/btnMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableBottom="@android:drawable/ic_dialog_email"
                    android:onClick="SendMessage"
                    android:text="@string/mensaje"
                    android:backgroundTint="@android:color/holo_green_dark">

                </Button>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
